kube/deploy/apps/openclaw/app/pvc-migrate.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: openclaw-misc
  namespace: openclaw
spec:
  from:
  - group: ""
    kind: PersistentVolumeClaim
    namespace: ai
  to:
  - group: snapshot.storage.k8s.io
    kind: VolumeSnapshot
    name: openclaw-misc
