kube/deploy/apps/openclaw/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app openclaw
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    - toFQDNs:
        - matchName: "brew.sh"
        - matchPattern: "*.brew.sh"
        - matchName: "openrouter.ai"
        - matchPattern: "*.openrouter.ai"
        - matchName: "nvidia.com"
        - matchPattern: "*.nvidia.com"
        - matchPattern: "*.*.nvidia.com"
        - matchName: "opencode.ai"
        - matchPattern: "*.opencode.ai"
        - matchName: "openai.com"
        - matchPattern: "*.openai.com"
        - matchName: "chatgpt.com"
        - matchPattern: "*.chatgpt.com"
        - matchName: "parallel.ai"
        - matchPattern: "*.parallel.ai"
        - matchName: "duckduckgo.com"
        - matchPattern: "*.duckduckgo.com"
        - matchName: "sinon.jj.dhcp.internal"
        - matchName: "silverhawk.internal"
